syntax = "proto3";

package submitSD;
option go_package = "github.com/jenmud/submitSD/registry/proto";


// Registry service.
service Registry {
  // Add a new service to the registry.
  rpc Add (AddReq) returns (AddResp) {}

  // GetByUUID fetches a service by its uuid.
  rpc GetByUUID (GetByUUIDReq) returns (GetByUUIDResp) {}
}

// Service registered in the registry and available for service discovery.
message Service {
	string uuid = 1;
	string name = 2;
	string description = 3;
	string version = 4;
	string type = 5;
	string ip = 6;
	string created_at = 7;
	string expires_at = 8;
	string expiry = 9;
}

// AddReq is a request used for adding in a new service.
message AddReq {
  Service service = 1;
}

// AddResp is the response once a service has been added.
message AddResp {
  Service service = 1;
}

// GetByUUIDReq is a req for fetching a service by its uuid.
message GetByUUIDReq {
  string uuid = 1;
}

// GetByUUIDResp is the response for fetching the service by its uuid.
message GetByUUIDResp {
  Service service = 1;
}